@@ -30,6 +30,10 @@ Listed features build on top of [Beyond Vanilla - QoL](https://mods.factorio.com
 
     > In order to win the game, it is no longer sufficient to merely launch a single rocket in order to escape the planet. Instead, multiple highly expensive (both research-wise and resource-wise) launches are required, with each putting a significant strain on your end game base, and leading to a natural transition towards a proper mega-base.
 
+-   Mine for resources in the asteroid belt ([Asteroid Mining](https://mods.factorio.com/mod/Asteroid_Mining))
+
+    > Once no longer planet-bound, the resources of the asteroid belt are yours for the taking - just make sure to properly configure the resource collection rockets by equipping them with the correct mining module.
+
 
 Known issues
 ------------
