@@ -8,4 +8,5 @@ Date: 9999-99-99
       - Re-enables technologies and features from "Spidertron Patrols".
     - End game
       - Increase victory condition complexity and difficulty (via "Space Extension Mod")
+      - Obtain raw resources through rocket launches/asteroid mining (via "Asteroid Mining")
   Bugfixes:
